# dream-of-kiki

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
docs/: ARCHITECTURE.md  glossary.md  osf-deviations-g5-ter-2026-05-03.md  osf-prereg-g4-octavo-pilot.md  osf-prereg-g4-pilot.md  osf-prereg-g4-sexto-pilot.md  osf-prereg-g5-cross-substrate.md  osf-prereg-g6-pilot.md  osf-prereg-g6-studio-path-a-star.md  osf-prereg-g6-studio-path-a.md  osf-prereg-g6-studio-path-c.md
docs/axioms/: AXIOMS.md
docs/interfaces/: eval-matrix.yaml  primitives.md
docs/invariants/: registry.md
docs/milestones/: arxiv-submit-log.md  cross-substrate-results.md  g10a-neuromorph.json  g10a-neuromorph.md  g2-pilot-results.json  g2-pilot-results.md  g2-pmin-report.md  g4-pequ-report.md  g4-pilot-2026-05-03-bis.json  g4-pilot-2026-05-03-bis.md  g4-pilot-2026-05-03.json  g4-pilot-2026-05-03.md  g4-quater-aggregate-2026-05-03.json  g4-quater-aggregate-2026-05-03.md  g4-quater-step3-2026-05-03.json  g4-quater-step3-2026-05-03.md  g4-quinto-step3-2026-05-03.json  g4-quinto-step3-2026-05-03.md  g4-septimo-aggregate-2026-05-04.json  (+20 more)
kiki_oniric/: README.md
ops/: create-mail-drafts.applescript  create-paper1-v0p2-mail-drafts.applescript  nature-hb-submit-tracker.md
scripts/: ablation_cycle3.py  ablation_g4.py  baseline_wake_sleep_cl.py  h6_jonckheere_cross_substrate.py  init_studyforrest_download.sh  megav2_loader.py  pilot_cycle3_real.py  pilot_cycle3_sanity.py  pilot_g2.py  pilot_phase2b_neuromorph.py
(+203 files in other folders)
