[project]
name = "dreamofkiki"
version = "0.1.0"
description = "Substrate-agnostic formal framework for dream-based knowledge consolidation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Clement Saillant", email = "clement@saillant.cc" }
]
dependencies = [
    "mlx>=0.18.0",
    "numpy>=2.0",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "duckdb>=1.0",
    "pyarrow>=17.0",
    "pandas>=2.2",
    "plotly>=5.20",
    "pyyaml>=6.0",
    "click>=8.1",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
fmri = [
    "nilearn>=0.10",
    "nibabel>=5.2",
    "scikit-learn>=1.5",
]
teacher = [
    "llama-cpp-python>=0.2.80",
]

[project.scripts]
dream-harness = "harness.cli.dream_harness:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=harness --cov=kiki_oniric --cov-report=term-missing --cov-fail-under=90"
